# mcp-server-git-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  skills.md
.github/workflows/: ci.yml  release.yml
bench/: README.md  run.py
bench/results/: 2026-04-25.md
src/: branches_ext.rs  features.rs  guard.rs  history.rs  inspection.rs  lib.rs  log.rs  main.rs  notes.rs  push.rs  remotes.rs  server.rs  stash.rs  tags.rs  tools.rs  worktrees.rs
tests/: branches_ext.rs  features.rs  history.rs  inspection.rs  notes.rs  push.rs  remotes.rs  stash.rs  tags.rs  tools.rs  worktrees.rs
tests/common/: mod.rs
