[package]
name = "mcp-server-git-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Fast Rust MCP server exposing git repository operations over stdio"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "git", "server"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Karan Vijayakumar <karanvknarayanan@gmail.com>"]
repository = "https://github.com/karan-vk/mcp-server-git-rs"
homepage = "https://github.com/karan-vk/mcp-server-git-rs"

[[bin]]
name = "mcp-server-git-rs"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal"] }
git2 = "0.20"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
jiff = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
